--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     </header>
     <main>
         <div class="WhatIdo">
+            <div class="WhatIdo__BG">
+                <p>0</p>
+            </div>
             <div class="WhatIdo__H3">
                 <p>What I do?</p>
             </div>
