--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main>
         <div class="WhatIdo">
             <div class="WhatIdo__BG">
-                <p>0</p>
+                <span></span>
             </div>
             <div class="WhatIdo__H3">
                 <p>What I do?</p>
@@ -87,6 +87,12 @@
             </div>
         </div>
         <div class="HowIdoit">
+            <div class="HowIdoit__BG1">
+                <span></span>
+            </div>
+            <div class="HowIdoit__BG2">
+                <span></span>
+            </div>
             <div class="HowIdoit__title">
                 <p>How I</p>
                 <p>do it?</p>
