--- a/pages/sobre-mi.html
+++ b/pages/sobre-mi.html
@@ -12,8 +12,8 @@
         <nav id="Inicio" class="menu">
             <ul class="menu__lista">
                 <li><a href="../index.html">HOME</a></li>
-                <li><a href="./pages/sobre-mi.html">ABOUT ME</a></li>
-                <li><a href="./pages/proyectos.html">PORTFOLIO</a></li>
+                <li><a href="./sobre-mi.html">ABOUT ME</a></li>
+                <li><a href="./proyectos.html">PORTFOLIO</a></li>
                 <li>SERVICES
                     <ul>
                         <li><a href="./pages/servicios/diseño-web.html">WEB DESIGN</a></li>
@@ -21,12 +21,12 @@
                         <li><a href="./pages/servicios/app-design.html">APP DESIGN</a></li>
                     </ul>
                 </li>
-                <li><a href="./pages/contacta.html">CONTACT</a></li>
+                <li><a href="./contacta.html">CONTACT</a></li>
             </ul>
         </nav>
         <div class="Banner__aboutme">
             <div class="Banner__aboutme__Designer--text">
-                <p>I'm designer</p>
+                <p>I'm a designer</p>
             </div>
             <div class="Banner__aboutme__Designer--img">
                 <img src="../img/Aboutme_designer.png" alt="">
