--- a/pages/contacta.html
+++ b/pages/contacta.html
@@ -5,40 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <header>
-        <nav id="Inicio">
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../Subpages/sobre-mi.html">Sobre mi</a></li>
-                <li><a href="../Subpages/proyectos.html">Proyectos</a></li>
-                <li><a href="../index.html">Servicios</a></li>
-                <li><a href="../Subpages/contacta.html">Contacta</a></li>    
+    <header class="header">
+        <nav id="Inicio" class="menu">
+            <ul class="menu__lista">
+                <li><a href="../index.html">HOME</a></li>
+                <li><a href="./sobre-mi.html">ABOUT ME</a></li>
+                <li><a href="./proyectos.html">PORTFOLIO</a></li>
+                <li>SERVICES
+                    <ul>
+                        <li><a href="./pages/servicios/diseño-web.html">WEB DESIGN</a></li>
+                        <li><a href="./pages/servicios/social-media.html">SOCIAL MEDIA</a></li>
+                        <li><a href="./pages/servicios/app-design.html">APP DESIGN</a></li>
+                    </ul>
+                </li>
+                <li><a href="./contacta.html">CONTACT</a></li>
             </ul>
         </nav>
+        <section>
+            <form action="#" class="Contact__Form">
+                <label for="editor" class="Contact__Form__Titles">Name:</label>
+                <br>
+                <input type="Name" class="Contact__Form__fillers">
+                <br>
+                <label for="editor" class="Contact__Form__Titles">Email:</label>
+                <br>
+                <input type="Name" class="Contact__Form__fillers">
+                <br>
+                <label for="editor" class="Contact__Form__Titles">Cellphone:</label>
+                <br>
+                <input type="Name" class="Contact__Form__fillers">
+                <br>
+                <label for="editor" class="Contact__Form__Titles">Service:</label>
+                <br>
+                <select name="Service:" id="" class="Contact__Form__fillers">
+                    <option value="">UI Design</option>
+                    <option value="">Web Design</option>
+                    <option value="">Social Media Design</option>
+                </select>
+                <br>
+                <input type="submit" value="Submit" class="Contact__Form__buttom">
+            </form>
+        </section>
+        <section class="Contact__space">
+        </section>
     </header>
-    <section>
-        <img src="https://images.pexels.com/photos/3184306/pexels-photo-3184306.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Handshake">
-        <fieldset>
-            <p>Nombre:</p>
-            <input type="text" placeholder="Nombre">
-            <p>Correo:</p>
-            <input type="text" placeholder="Correo">
-            <p>Celular:</p>
-            <input type="text" placeholder="Celular">
-            <p>Servicio de interés:</p>
-            <select name="Servicios">
-                <option value="Design web">Diseño web</option>
-                <option value="Design App">Diseño App</option>
-                <option value="Branding">Branding</option>
-                <option value="Social media">Social media</option>
-            </select>
-            <input type="submit" value="Enviar">
-        </fieldset>
-    </section>
     <footer>
-        <a href="../index.html">Volver al inicio</a>
+        <div class="footer">
+            <a href="../index.html">RETURN HOME</a>
+        </div>
     </footer>
-</body>
-</html>
